--- a/rime/installation.yaml
+++ b/rime/installation.yaml
@@ -1,6 +1,7 @@
 distribution_code_name: Squirrel
 distribution_name: "鼠鬚管"
-distribution_version: 0.11.0
+distribution_version: 0.14.0
 install_time: "Fri Apr 12 12:15:44 2019"
-installation_id: "jysperm"
-rime_version: 1.4.0
+installation_id: jysperm
+rime_version: 1.5.3
+update_time: "Wed Jun 26 14:40:01 2019"
